<resources>
    <string name="app_name">Mi Café</string>

    <string name="ip_servidor">https://appmicafe.000webhostapp.com/micafe/php/</string>

    <string name="ip_servidor1">http://192.168.1.48:8081/micafe/php/</string>
    <string name="contrasenia">Contraseña</string>
    <string name="cedula">Cedula</string>
    <string name="login">Ingresar</string>
    <string name="btn_registrarme">Registrarme</string>
    <string name="numero_de_cedula">Numero Documento Identidad</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="numero_de_celular">Numero De Celular</string>
    <string name="registrarme">Registrarme</string>
    <string name="direccion_de_residencia">Direccion De Residencia</string>
    <string name="departamento_residencia">Departamento Residencia</string>
    <string name="municipio_de_residencia">Municipio Residencia</string>
    <string name="fecha_de_nacimiento">Fecha De Nacimiento</string>
    <string name="title_activity_caficultor">MiCafé</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_finca">Crear Finca</string>
    <string name="nombre_de_la_finca">Nombre de la finca</string>
    <string name="departamento">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="corregimiento">Corregimiento</string>
    <string name="vereda">Vereda</string>
    <string name="hectareas">Hectareas</string>
    <string name="telefono_de_contacto">Telefono de contacto</string>
    <string name="crear_oferta">Crear Oferta</string>
    <string name="caracteristicas_de_la_planta">Caracteristicas de la planta</string>
    <string name="servicios_a_los_recolectores">Servicios a los recolectores</string>
    <string name="por_kilos">Por Kilos</string>
    <string name="valor_del_pago">Valor del pago</string>
    <string name="jornal">Jornal</string>
    <string name="title_activity_recolector">Mi Café</string>
    <string name="no_disponible">no disponible</string>
</resources>
