<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hacu.micafe.Caficultor.FragmentsCaf.RegistroFincaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="Registro de Finca"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="3">
                    <TextView
                        android:id="@+id/regfin_ubicacion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Ubicación GPS"
                        android:textSize="30dp"
                        />
                    <ImageView
                        android:id="@+id/regfin_btnlocation"
                        android:layout_gravity="bottom"
                        android:src="@drawable/ic_my_location"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/regfin_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/nombre_de_la_finca"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/regfin_departamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/departamento"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/regfin_municipio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/municipio"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/regfin_corregimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/corregimiento"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/regfin_vereda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/vereda"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/regfin_hectareas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hectareas"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regfin_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/telefono_de_contacto"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/regfin_btnRegistrar"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:text="Registrar"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>


</FrameLayout>
