<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hacu.micafe.Caficultor.FragmentsCaf.DetalleFincaCaficultorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:text="Finca"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/detcafin_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/nombre_de_la_finca"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <TextView
                    android:text="Departamento"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/detcafin_departamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/departamento"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <TextView
                    android:text="Municipio"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/detcafin_municipio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/municipio"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <TextView
                    android:text="Corregimiento"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/detcafin_corregimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/corregimiento"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <TextView
                    android:text="Vereda"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/detcafin_vereda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/vereda"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp" />
                <TextView
                    android:text="@string/hectareas"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/detcafin_hectareas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hectareas"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"/>
                <TextView
                    android:text="@string/telefono_de_contacto"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/detcafin_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/telefono_de_contacto"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:weightSum="2">

            <Button
                android:id="@+id/detfincaf_btnActualizar"
                android:text="Actualizar"
                android:textSize="25dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimaryDark"/>
            <Button
                android:id="@+id/detfincaf_btnVolver"
                android:text="Volver"
                android:textSize="25dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
