<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hacu.micafe.Caficultor.FragmentsCaf.RegistroOfertaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="NUEVA OFERTA"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Finca "
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/regofe_comboFincas"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:textAlignment="center"
                        android:textColor="@color/amarillo"
                        android:background="@color/vinotinto"
                        android:dropDownSelector="@color/amarillo"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Modo de pago"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radKilos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/por_kilos" />

                        <RadioButton
                            android:id="@+id/radJornal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jornal" />

                    </RadioGroup>
                </LinearLayout>

                <EditText
                    android:id="@+id/regofe_valorpago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/valor_del_pago"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regofe_vacantes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="Cantidad de recolectores necesarios"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regofe_diastrabajo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="Dias de trabajo"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <TextView
                        android:id="@+id/regofe_fechaninicio"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Fecha de inicio de trabajo"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        android:layout_weight="2"
                        />
                    <ImageView
                        android:id="@+id/regofe_btnfecha"
                        android:src="@mipmap/ic_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/regofe_planta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lines="5"
                    android:maxLength="600"
                    android:hint="@string/caracteristicas_de_la_planta"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regofe_servicios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lines="5"
                    android:maxLength="600"
                    android:hint="@string/servicios_a_los_recolectores"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/regofe_btnRegistrarOferta"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:text="Registrar"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</FrameLayout>
